<resources>
    <string name="app_name">ChatApp</string>
    <string name="empty" />
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="title_user_list">Users</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone No.</string>
    <string name="create">Create</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="change_status">Change Status</string>
    <string name="create_account">Create account</string>
    <string name="new_friend_request">New friend request</string>
    <string name="login">login</string>
    <string name="welcome_to_quick_chat">Welcome to Quick Chat</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="chat_icon">Chat icon</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Display name can not be empty or Display name is too short</string>
    <string name="invalid_phone">Phone No can not be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_don_not_have_account">Don\'t have account? <u> Register Here </u></string>
    <string name="text_already_have_account">Already have account? <u> Login Here </u></string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
</resources>