<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_ten"
            android:padding="@dimen/margin_ten"
            android:src="@drawable/ic_back"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_twenty"
            android:gravity="center"
            android:text="@string/title_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/blurredUserImage"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/userImageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="60dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="@id/blurredUserImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blurredUserImage"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars[0]" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvName"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImageCardView"
            tools:text="Name" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/MessageSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxLength="40"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="Status" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statesLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="42dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStatus">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_add_friend_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/add_friend"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btn_remove_friend_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/remove_friend"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btn_request_sent_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:enabled="false"
                    android:text="@string/request_sent"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btn_accept_request_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/accept_friend_request"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btn_decline_request_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/textError"
                    android:text="@string/decline_friend_request"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>